# Yoshikosan

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ALTERNATIVE_INPUT_SUMMARY.md  CAMERA_FIX_ANALYSIS.md  CAMERA_FIX_SUMMARY.md  DEBUG_MODE_IMPLEMENTATION.md  Makefile  README.md  TEST_WORKFLOW.md  WORKFLOW_TEST_RESULTS.md  docker-compose.yml  nginx.conf  package.json  test-workflow.js
yoshikosan-backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml
yoshikosan-backend/alembic/: env.py
yoshikosan-backend/alembic/versions/: 001_initial_authentication_schema.py  002_create_sop_tables.py  003_create_session_tables.py  004_add_feedback_audio_url.py  004_add_session_pause_abort.py
yoshikosan-backend/src/: __init__.py  main.py
yoshikosan-backend/src/api/dependencies/: __init__.py  auth.py  repositories.py
yoshikosan-backend/src/api/v1/: __init__.py
yoshikosan-backend/src/application/: __init__.py
yoshikosan-backend/src/application/audit/: __init__.py  approve_session.py  reject_session.py
yoshikosan-backend/src/application/safety_check/: __init__.py  execute_check.py
yoshikosan-backend/src/application/sop/: __init__.py  structure_sop.py  upload_sop.py
yoshikosan-backend/src/application/work_session/: __init__.py  abort_session.py  pause_session.py  resume_session.py  start_session.py
yoshikosan-backend/src/config/: __init__.py  settings.py
yoshikosan-backend/src/db/: __init__.py  base.py  session.py
yoshikosan-backend/src/domain/user/: jwt.py  (+3 more)
yoshikosan-backend/src/schemas/: audit.py  check.py  session.py  sop.py
yoshikosan-backend/tests/: __init__.py
yoshikosan-backend/tests/ai_services/: README.md  __init__.py  conftest.py  test_hume_integration.py  test_sambanova_integration.py
yoshikosan-backend/tests/domain/: test_work_session.py
(+103 files in other folders)
